[package]
name = "vesting-contract-cli"
version = "0.1.0"
authors = ["Bonfida <contact@bonfida.com>"]
edition = "2018"

[dependencies]
solana-program = "1.14.5"
solana-client = "1.14.5"
solana-sdk = "1.14.5"
solana-clap-utils = "1.14.5"
token-vesting =  { version = "0.1.0", path="../program", features=["no-entrypoint"] }
spl-token = {version = "3.5.0", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.2", features = ["no-entrypoint"]}
clap = "4.0.10"
chrono = "0.4.19"
iso8601-duration = { git = "https://github.com/rrichardson/iso8601-duration.git", rev = "9e01f51ea253e95e0fba5e4d7ad0c537922931e7"}